Bug#30152 MySQLD crash duing alter table causes DROP DATABASE to FAIL due to temp file disable decoding of table name if the table is internal temporary table